<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DetailFragment">

    <ImageView
        android:id="@+id/image_flag"
        android:layout_width="@dimen/detail_image_height"
        android:layout_height="@dimen/detail_image_width"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/desc_image_item"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_detail"
        app:srcCompat="@drawable/vietnam" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.12" />

    <TextView
        android:id="@+id/text_nation_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/title_nation_detail"
        android:textColor="@color/orange"
        android:textSize="@dimen/text_medium"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/text_capital_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_capital_detail"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_nation_name"
        app:layout_constraintStart_toStartOf="@+id/text_nation_name"
        app:layout_constraintTop_toBottomOf="@+id/text_nation_name" />

    <TextView
        android:id="@+id/text_population"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_population"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_nation_name"
        app:layout_constraintStart_toStartOf="@+id/text_nation_name"
        app:layout_constraintTop_toBottomOf="@+id/text_capital_detail" />

    <TextView
        android:id="@+id/text_area"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_area"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_population"
        app:layout_constraintStart_toStartOf="@+id/text_population"
        app:layout_constraintTop_toBottomOf="@+id/text_population" />

    <TextView
        android:id="@+id/text_density"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_density"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_area"
        app:layout_constraintStart_toStartOf="@+id/text_area"
        app:layout_constraintTop_toBottomOf="@+id/text_area" />

    <TextView
        android:id="@+id/text_world_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_world_share"
        android:textColor="@color/material_dynamic_neutral10"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/text_density"
        app:layout_constraintStart_toStartOf="@+id/text_density"
        app:layout_constraintTop_toBottomOf="@+id/text_density" />

    <View
        android:id="@+id/vw_divider"
        android:layout_width="0dp"
        android:layout_height="@dimen/height_2"
        android:layout_marginStart="@dimen/margin_64"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/margin_64"
        android:background="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />
</androidx.constraintlayout.widget.ConstraintLayout>
